--- a/ch14/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
+++ b/ch14/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
@@ -25,13 +25,13 @@
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
-
-				<PackageReference Include="Azure.Identity" Version="1.10.4" />
-		<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.3.0" />
-		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.0.0-preview.6.24177.4" />
-		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.7.0" />
-		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
+		<PackageReference Include="Azure.Identity" Version="1.10.4" />
+		<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.4.0-preview.24202.1" />
+		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.1.0-preview.*" />
+		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.8.0" />
+		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.0" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.7.1" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.8.0-beta.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.7.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.7.0" />
     </ItemGroup>
