--- a/ch14/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch14/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -14,12 +14,17 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Identity" Version="1.10.4" />
 		<PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.6.0-beta.24" />
+		<PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Protobuf Include="..\Codebreaker.GameAPIs\Protos\GameService.proto" GrpcServices="Client" />
 	</ItemGroup>
 
 </Project>
