--- a/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>-->
   
   <ItemGroup>
+    <ProjectReference Include="..\Codebreaker.BotQ\Codebreaker.BotQ.csproj" />
     <ProjectReference Include="..\CodeBreaker.Bot\CodeBreaker.Bot.csproj" />
     <ProjectReference Include="..\Codebreaker.GameAPIs\Codebreaker.GameAPIs.csproj" />
     <ProjectReference Include="..\Codebreaker.Live\Codebreaker.Live.csproj" />
