--- a/ch15/Codebreaker.Ranking/appsettings.json
+++ b/ch15/Codebreaker.Ranking/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DataStore": "Cosmos",
-  "Bot": {
-    "Loop": true,
-    "Delay": 2000
-  }
+  "AllowedHosts": "*"
 }
