--- a/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -11,37 +11,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="appsettings.Prometheus.json" />
-  </ItemGroup>
-
-    <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Hosting.Azure" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.EventHubs" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.1.0-preview.1.24210.3" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.1.0-preview.1.*" />
     <PackageReference Include="Aspire.Hosting.Redis" Version="8.1.0-preview.*" />
   </ItemGroup>
-
-<!--  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.0.0-preview.5.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.0.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.0.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="8.0.0-preview.6.*" />
-  </ItemGroup>-->
   
   <ItemGroup>
     <ProjectReference Include="..\Codebreaker.BotQ\Codebreaker.BotQ.csproj" />
     <ProjectReference Include="..\CodeBreaker.Bot\CodeBreaker.Bot.csproj" />
     <ProjectReference Include="..\Codebreaker.GameAPIs\Codebreaker.GameAPIs.csproj" />
     <ProjectReference Include="..\Codebreaker.Live\Codebreaker.Live.csproj" />
+    <ProjectReference Include="..\Codebreaker.Ranking\Codebreaker.Ranking.csproj" />
   </ItemGroup>
 
 </Project>
