--- a/ch15/Codebreaker.Ranking/Codebreaker.Ranking.csproj
+++ b/ch15/Codebreaker.Ranking/Codebreaker.Ranking.csproj
@@ -7,13 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.1.0-preview.*" />
+    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.26" />
+    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.1.0-preview.*" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
