--- a/ch15/Codebreaker.GameAPIs/Properties/launchSettings.json
+++ b/ch15/Codebreaker.GameAPIs/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:9401",
+      "applicationUrl": "https://localhost:9401;http://localhost:9400",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
