--- a/ch15/Codebreaker.Live/Codebreaker.Live.csproj
+++ b/ch15/Codebreaker.Live/Codebreaker.Live.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	<IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
+	<UserSecretsId>38af0a0f-4021-416f-bc92-73f548a0a26c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
