--- a/ch15/Codebreaker.AppHost/appsettings.Development.json
+++ b/ch15/Codebreaker.AppHost/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DataStore": "Cosmos",
+  "DataStore": "SqlServer",
   "Bot": {
     "Loop": true,
     "Delay": 10000
