--- a/ch15/Codebreaker.Ranking/Codebreaker.Ranking.csproj
+++ b/ch15/Codebreaker.Ranking/Codebreaker.Ranking.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c51559a1-d7fb-4ce2-9052-8b1828419b89</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.1.0-preview.*" />
+   	<PackageReference Include="Aspire.Confluent.Kafka" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.1.0-preview.*" />
   </ItemGroup>
 
