--- a/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -19,7 +19,8 @@
     <PackageReference Include="Aspire.Hosting.Azure.EventHubs" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.1.0-preview.1.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Hosting.Redis" Version="8.1.0-preview.*" />
   </ItemGroup>
   
