--- a/ch15/Codebreaker.Live/Codebreaker.Live.csproj
+++ b/ch15/Codebreaker.Live/Codebreaker.Live.csproj
@@ -14,8 +14,9 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.1.0-preview.*" />
+	<PackageReference Include="Aspire.Confluent.Kafka" Version="8.1.0-preview.*" />
     <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.1.0-preview.*" />
-    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.26" />
+    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.27" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.62.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.4" />
