ch09 bot updates

--- a/ch09/CodeBreaker.Bot/appsettings.json
+++ b/ch09/CodeBreaker.Bot/appsettings.json
@@ -1,23 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "SolutionEnvironment": "Azure",
-  "AzureAppConfigurationUri": "https://appcs-codebreaker42-dev.azconfig.io",
-  "CodebreakerBot": {
-    "Authentication": "AADB2C",
-    "ManagedIdentityClientId": "aff48fe4-2f4a-4e56-9fae-bc024267f703",
-    "SolutionEnvironment": "Azure",
-    "AzureAdB2C": {
-      "Instance": "https://codebreaker3000.b2clogin.com",
-      "Domain": "codebreaker3000.onmicrosoft.com",
-      "ClientId": "bccbbae1-f1c0-410f-8711-2a0cab7b6dc3",
-      "SignedOutCallbackPath": "/signout/B2C_1_SUSI",
-      "SignUpSignInPolicyId": "B2C_1_SUSI"
-    }
-  }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
