--- a/ch09/CodeBreaker.Bot/Properties/launchSettings.json
+++ b/ch09/CodeBreaker.Bot/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "Codebreakerbot": {
+    "http": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
@@ -11,11 +11,15 @@
       "applicationUrl": "http://localhost:5141",
       "dotnetRunMessages": true
     },
-    "Docker": {
-      "commandName": "Docker",
+    "https": {
+      "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5142:http://localhost:5141",
+      "dotnetRunMessages": true
     }
   }
 }
