--- a/ch09/CodeBreaker.Bot/appsettings.Development.json
+++ b/ch09/CodeBreaker.Bot/appsettings.Development.json
@@ -5,7 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CodebreakerBot": {
-    "SolutionEnvironment": "Local"
-  }
+  "ApiBase": "https://codebreaker-gamesapi-3.purplebush-9a246700.westeurope.azurecontainerapps1.io",
+  "ApiBase1": "http://localhost:9400"
 }
