--- a/ch09/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch09/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -4,33 +4,30 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
-    <UserSecretsId>10385a16-970d-4395-b89d-b28be16e4ac9</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <ContainerRegistry>codebreaker2j65mk73a46zmdev.azurecr.io</ContainerRegistry>
-    <ContainerRepository>codebreaker/gamesapi</ContainerRepository>
-    <ContainerImageTags>3.5.8;latest</ContainerImageTags>
+    <InvariantGlobalization>false</InvariantGlobalization>
+    <UserSecretsId>603964e6-08bc-40f9-8505-074b9466a41f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <ContainerPort Include="8080" Type="tcp" />
+	<InternalsVisibleTo Include="Codbreaker.APIs.Tests" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.5.0-beta.14" />
-    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.5.0-beta.14" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
-    <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="7.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.6.24214.1" />
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.6.24214.1" />
+    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
+    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.6.0-beta.16" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
     <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="3.2.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.17.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.2" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="7.1.0" />	  
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
