game apis with auth

--- a/ch09/Codebreaker.GameAPIs/appsettings.Development.json
+++ b/ch09/Codebreaker.GameAPIs/appsettings.Development.json
@@ -1,3 +1,9 @@
 {
-  "SolutionEnvironment": "Local"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "DataStore": "Cosmos"
 }
