--- a/ch09/Codebreaker.GameAPIs/appsettings.json
+++ b/ch09/Codebreaker.GameAPIs/appsettings.json
@@ -6,19 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-  "SolutionEnvironment": "Azure",
-  "AzureAppConfigurationUri": "https://appcs-codebreaker42-dev.azconfig.io",
-  "ManagedIdentityClientId": "aff48fe4-2f4a-4e56-9fae-bc024267f703",
-  "FeatureManagement": {
-    "FeatureGame6x4": true,
-    "FeatureGame8x5": {
-      "EnabledFor": [
-        {
-          "Name": "Microsoft.Percentage",
-          "Parameters": {
-            "Value": 50
-          }
-        }
-      ]}
+  "DataStore": "Cosmos",
+  "ConnectionStrings": {
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
+  },
+  "AzureAdB2C": {
+    "Instance": "https://codebreaker3000.b2clogin.com",
+    "Domain": "codebreaker3000.onmicrosoft.com",
+    "ClientId": "b90525d4-b7ed-443d-bca1-13be9953d9e4",
+    "SignedOutCallbackPath": "/signout/B2C-1-SUSI",
+    "SignUpSignInPolicyId": "B2C_1_SUSI"
   }
 }
