--- a/ch09/Codebreaker.GameAPIs/Properties/launchSettings.json
+++ b/ch09/Codebreaker.GameAPIs/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Codebreaker.GameAPIs": {
+    "http": {
       "commandName": "Project",
       "launchUrl": "swagger",
       "environmentVariables": {
@@ -9,11 +9,14 @@
       "applicationUrl": "http://localhost:9400",
       "dotnetRunMessages": true
     },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true
+    "https": {
+      "commandName": "Project",
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:9401;http://localhost:9400",
+      "dotnetRunMessages": true
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json"
