yarp with transforms

--- a/ch09/Codebreaker.ApiGateway/appsettings.json
+++ b/ch09/Codebreaker.ApiGateway/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "AzureAdB2C": {
+    "Instance": "https://codebreaker3000.b2clogin.com",
+    "Domain": "codebreaker3000.onmicrosoft.com",
+    "ClientId": "b90525d4-b7ed-443d-bca1-13be9953d9e4",
+    "SignedOutCallbackPath": "/signout/B2C-1-SUSI",
+    "SignUpSignInPolicyId": "B2C_1_SUSI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,22 +14,6 @@
   },
   "AllowedHosts": "*",
   "ReverseProxy": {
-    "Clusters": {
-      "botcluster": {
-        "Destinations": {
-          "botcluster/destination1": {
-            "Address": "http://localhost:5141"
-          }
-        }
-      },
-      "gamesapicluster": {
-        "Destinations": {
-          "gamescluster/destination1": {
-            "Address": "http://localhost:9400"
-          }
-        }
-      }
-    },
     "Routes": {
       "gamesRoute": {
         "ClusterId": "gamesapicluster",
@@ -34,6 +25,33 @@
         "ClusterId": "botcluster",
         "Match": {
           "Path": "/bot/{*any}"
+        }
+      },
+      "botswaggerRoute": {
+        "ClusterId": "botcluster",
+        "Match": {
+          "Path": "/bot/swagger/{*any}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/bot"
+          }
+        ]
+      }
+    },
+    "Clusters": {
+      "botcluster": {
+        "Destinations": {
+          "botcluster/destination1": {
+            "Address": "http://bot"
+          }
+        }
+      },
+      "gamesapicluster": {
+        "Destinations": {
+          "gamescluster/destination1": {
+            "Address": "http://gameapis"
+          }
         }
       }
     }
