--- a/ch09/CodeBreaker.Bot/Properties/launchSettings.json
+++ b/ch09/CodeBreaker.Bot/Properties/launchSettings.json
@@ -18,7 +18,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5142:http://localhost:5141",
+      "applicationUrl": "https://localhost:5142;http://localhost:5141",
       "dotnetRunMessages": true
     }
   }
