--- a/ch09/BlazorWASMAuth/BlazorWASMAuth/appsettings.json
+++ b/ch09/BlazorWASMAuth/BlazorWASMAuth/appsettings.json
@@ -1,6 +1,10 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "DataSource=Data\\app.db;Cache=Shared"
+  "AzureAdB2C": {
+    "Instance": "https://codebreaker3000.b2clogin.com/",
+    "ClientId": "95d03b7e-e579-40bc-a100-a7bfc08fb22c",
+    "Domain": "codebreaker3000.onmicrosoft.com",
+    "Scopes": "Games.Play",
+    "SignUpSignInPolicyId": "B2C_1_SUSI"
   },
   "Logging": {
     "LogLevel": {
