update ef context and migrations to fix asp.net core identity with mysql

--- a/ch09/Codebreaker.ApiGateway.Identities/Codebreaker.ApiGateway.Identities/Codebreaker.ApiGateway.Identities.csproj
+++ b/ch09/Codebreaker.ApiGateway.Identities/Codebreaker.ApiGateway.Identities/Codebreaker.ApiGateway.Identities.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Pomelo.EntityFrameworkCore.MySql" Version="8.0.0-preview.6.24214.1" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="8.0.0-preview.6.24214.1" />
     <PackageReference Include="Yarp.ReverseProxy" Version="2.1.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="2.18.1" />
