--- a/ch09/Codebreaker.ApiGateway.Identities/Codebreaker.ApiGateway.Identities/appsettings.json
+++ b/ch09/Codebreaker.ApiGateway.Identities/Codebreaker.ApiGateway.Identities/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=Data\\app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=Data\\app.db;Cache=Shared",
+    "usersdb": "DataSource=Data\\app.db;Cache=Shared"
   },
   "Logging": {
     "LogLevel": {
