--- a/ch02/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch02/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.5.24154.1" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
   </ItemGroup>
   
   <ItemGroup>
