--- a/ch02/Codebreaker.GameAPIs/Properties/launchSettings.json
+++ b/ch02/Codebreaker.GameAPIs/Properties/launchSettings.json
@@ -1,6 +1,15 @@
 {
   "profiles": {
-    "Codebreaker.GameAPIs": {
+    "https": {
+      "commandName": "Project",
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:9401;http://localhost:9400",
+      "dotnetRunMessages": true
+    },
+    "http": {
       "commandName": "Project",
       "launchUrl": "swagger",
       "environmentVariables": {
@@ -8,12 +17,6 @@
       },
       "applicationUrl": "http://localhost:9400",
       "dotnetRunMessages": true
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json"
