--- a/ch09/Codebreaker.Console/Codebreaker.Console.csproj
+++ b/ch09/Codebreaker.Console/Codebreaker.Console.csproj
@@ -11,11 +11,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.60.3" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.48.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Codebreaker.GameAPIs.Client\Codebreaker.GameAPIs.Client.csproj" />
   </ItemGroup>
 
   <ItemGroup>
