allow unsecure endpoint

--- a/ch01/AspireSample/AspireSample.AppHost/Properties/launchSettings.json
+++ b/ch01/AspireSample/AspireSample.AppHost/Properties/launchSettings.json
@@ -22,7 +22,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19163",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20168"
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20168",
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
       }
     }
   }
