--- a/ch01/AspireSampleWithAzure/AspireSample.AppHost/AspireSample.AppHost.csproj
+++ b/ch01/AspireSampleWithAzure/AspireSample.AppHost/AspireSample.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="8.0.0-preview.7.24251.11" />
   </ItemGroup>
 
 </Project>
