--- a/ch04/server/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch04/server/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -10,8 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.5.24158.8" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.5.24158.8" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.SqlServer" Version="8.0.0-preview.7.24251.11" />
   </ItemGroup>
   
   <ItemGroup>
