update appsettings for onpremises

--- a/ch16/Codebreaker.AppHost/appsettings.json
+++ b/ch16/Codebreaker.AppHost/appsettings.json
@@ -6,11 +6,8 @@
       "Aspire.Hosting.Dcp": "Warning"
     }
   },
-  "DataStore": "Cosmos",
-  "StartupMode": "Azure",
-  "ConnectionStrings": {
-    "StartupMode": "Connection string startup"
-  },
+  "DataStore": "SqlServer",
+  "StartupMode": "OnPremises",
   "Aspire": {
     "Microsoft": {
       "EntityFrameworkCore": {
