--- a/ch07/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
+++ b/ch07/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
@@ -7,6 +7,11 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<IsPublishable>true</IsPublishable>
+		<EnableSdkContainerSupport>true</EnableSdkContainerSupport>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
 			<PrivateAssets>all</PrivateAssets>
