--- a/ch07/ConfigurationPrototype/appsettings.json
+++ b/ch07/ConfigurationPrototype/appsettings.json
@@ -10,5 +10,8 @@
   "Service1": {
     "Config1": "config 1 value",
     "Config2": "config 2 value"
+  },
+  "ConnectionStrings": {
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
   }
 }
