--- a/ch08/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch08/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -10,10 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0-preview.1.24179.9" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.1.0-preview.1.24179.9" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.1.0-preview.1.24179.9" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.1.0-preview.1.24179.9" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="8.0.0-preview.7.24251.11" />
   </ItemGroup>
   
   <ItemGroup>
