--- a/ch08/Codebreaker.AppHost/Properties/launchSettings.json
+++ b/ch08/Codebreaker.AppHost/Properties/launchSettings.json
@@ -1,6 +1,18 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:15101;http://localhost:15100",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DOTNET_ENVIRONMENT": "Development",
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:16263",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22052"
+      }
+    },
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
@@ -9,8 +21,9 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16263",
-        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16264",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20236",
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "True"
       }
     }
   }
