--- a/ch09/Codebreaker.ApiGateway/appsettings.json
+++ b/ch09/Codebreaker.ApiGateway/appsettings.json
@@ -3,7 +3,7 @@
     "Instance": "https://codebreaker3000.b2clogin.com",
     "Domain": "codebreaker3000.onmicrosoft.com",
     "ClientId": "b90525d4-b7ed-443d-bca1-13be9953d9e4",
-    "SignedOutCallbackPath": "/signout/B2C-1-SUSI",
+    "SignedOutCallbackPath": "/signout/B2C_1_SUSI",
     "SignUpSignInPolicyId": "B2C_1_SUSI"
   },
   "Logging": {
