--- a/ch09/WebAppAuth/appsettings.json
+++ b/ch09/WebAppAuth/appsettings.json
@@ -1,13 +1,17 @@
 {
   "AzureAdB2C": {
-    "Instance": "https://login.microsoftonline.com/tfp/",
-    "ClientId": "11111111-1111-1111-11111111111111111",
+    "Instance": "https://codebreaker3000.b2clogin.com",
+    "ClientId": "bdac5cf7-b83f-4a05-b8f2-501218192fb8",
     "CallbackPath": "/signin-oidc",
-    "Domain": "qualified.domain.name",
-    "SignedOutCallbackPath": "/signout/B2C_1_susi",
-    "SignUpSignInPolicyId": "b2c_1_susi",
-    "ResetPasswordPolicyId": "b2c_1_reset",
-    "EditProfilePolicyId": "b2c_1_edit_profile"
+    "Domain": "codebreaker3000.onmicrosoft.com",
+    "SignedOutCallbackPath": "/signout/B2C_1_SUSI",
+    "SignUpSignInPolicyId": "B2C_1_SUSI",
+    "ResetPasswordPolicyId": "B2C_1_RESET",
+    "EditProfilePolicyId": "B2C_1_EDIT_PROFILE",
+    "Scopes": [
+      "play",
+      "query"
+    ]
   },
   "Logging": {
     "LogLevel": {
