ch11 preview 7 updates

--- a/ch11/Codebreaker.AppHost/appsettings.json
+++ b/ch11/Codebreaker.AppHost/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
-  }
+  },
+  "DataStore": "Cosmos",
+  "StartupMode": "Default"
 }
