--- a/ch11/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch11/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="8.0.0-preview.7.24251.11" />
 		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.7.24251.11" />
 		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.StackExchange.Redis" Version="8.0.0-preview.7.24251.11" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.1" />
