--- a/ch11/Codebreaker.AppHost/Properties/launchSettings.json
+++ b/ch11/Codebreaker.AppHost/Properties/launchSettings.json
@@ -11,7 +11,8 @@
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:16037",
         "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:17037",
-        "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true"
+        "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true",
+        "STARTUP_MODE": "Azure"
       }
     },
     "http": {
@@ -25,31 +26,33 @@
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16037",
         "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:17037",
         "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true",
-        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
-      },
-      "OnPremises": {
-        "commandName": "Project",
-        "launchBrowser": true,
-        "dotnetRunMessages": true,
-        "applicationUrl": "http://localhost:15100",
-        "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development",
-          "DOTNET_ENVIRONMENT": "Development",
-          "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16037",
-          "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:17037",
-          "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true",
-          "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true",
-          "STARTUP_MODE": "OnPremises"
-        }
-      },
-      "generate-manifest": {
-        "commandName": "Project",
-        "dotnetRunMessages": true,
-        "commandLineArgs": "--publisher manifest --output-path aspire-manifest.json",
-        "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development",
-          "DOTNET_ENVIRONMENT": "Development"
-        }
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true",
+        "STARTUP_MODE": "Azure"
+      }
+    },
+    "OnPremises": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:15100",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DOTNET_ENVIRONMENT": "Development",
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16037",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:17037",
+        "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true",
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true",
+        "STARTUP_MODE": "OnPremises",
+        "DataStore": "SqlServer"
+      }
+    },
+    "generate-manifest": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "commandLineArgs": "--publisher manifest --output-path aspire-manifest.json",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DOTNET_ENVIRONMENT": "Development"
       }
     }
   }
