--- a/ch06/Codebreaker.AppHost/infra/gameapis.tmpl.yaml
+++ b/ch06/Codebreaker.AppHost/infra/gameapis.tmpl.yaml
@@ -9,10 +9,10 @@ properties:
   configuration:
     activeRevisionsMode: single
     ingress:
-      external: false
+      external: true
       targetPort: {{ targetPortOrDefault 8080 }}
       transport: http
-      allowInsecure: true
+      allowInsecure: false
     registries:
       - server: {{ .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT }}
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
