add comments to appsettings.development.json for DataStore selections

--- a/ch03/Codebreaker.AppHost/appsettings.Development.json
+++ b/ch03/Codebreaker.AppHost/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
+  // change this to SqlServer to use the SQL Server database
+  // change this to Cosmos to use the Azure Cosmos DB database
+  // change this to InMemory to use the in-memory repository
   "DataStore": "Cosmos",
   // this is the connection string for the Azure Cosmos DB Emulator with a well-known account key
   // To use it start the local installed emulator and change the DataStore configuration to Cosmos 
