--- a/ch09/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
+++ b/ch09/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
@@ -10,14 +10,14 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-	<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.4.0" />
-	<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.0.0-preview.7.24251.11" />
-	<PackageReference Include="Microsoft.Identity.Web" Version="2.18.1" />
+	<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.5.0" />
+	<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.0.1" />
+	<PackageReference Include="Microsoft.Identity.Web" Version="2.18.2" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.8.1" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.1" />
 	<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.8.1" />
 	<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.8.1" />
-	<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.8.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.8.1" />
  	<PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="7.2.0" />
 	<PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.1.1" />
   </ItemGroup>
