chapter 13 bump packages

--- a/ch13/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
+++ b/ch13/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
@@ -19,7 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.5.24163.10" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
