chapter 15 bump packages

--- a/ch15/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch15/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -22,29 +22,29 @@
 
     <ItemGroup>
 		<PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Confluent.Kafka" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.0.1" />
+		<PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.0.1" />
+		<PackageReference Include="Aspire.Confluent.Kafka" Version="8.0.1" />
+		<PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
+		<PackageReference Include="Aspire.Hosting.Azure" Version="8.0.1" />
+		<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.1" />
+		<PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.1" />
+		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.1" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.1" />
 	</ItemGroup>
 
 
 	<ItemGroup>
 		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.27" />
 		<PackageReference Include="Grpc.AspNetCore" Version="2.62.0" />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
-		<PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="8.0.4">
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
+		<PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="8.0.5">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
 		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.6.0-beta.16" />
 		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
 	</ItemGroup>
