--- a/ch06/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
+++ b/ch06/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
@@ -20,7 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.6.0-beta.16" />
+		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.7.0" />
 	</ItemGroup>
 
 	<ItemGroup>
