--- a/ch10/Start/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch10/Start/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.11.3" />
-    <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.6.0-beta.24" />
+    <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
