ch12 bump packages

--- a/ch12/CodeBreaker.Blazor/CodeBreaker.Blazor.csproj
+++ b/ch12/CodeBreaker.Blazor/CodeBreaker.Blazor.csproj
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BlazorApplicationInsights" Version="3.0.5" />
-    <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.6.0-beta.24" />
+    <PackageReference Include="BlazorApplicationInsights" Version="3.1.0" />
+    <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.5" PrivateAssets="all" />
