--- a/ch12/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch12/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -22,14 +22,14 @@
 
 	<ItemGroup>
 		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.1" />
-		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.27" />
+		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
 		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
-		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.6.0-beta.16" />
+		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.7.0" />
 		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.1" />
-		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
+		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
 	</ItemGroup>
 
 	<ItemGroup>
