ch16 bump packages

--- a/ch16/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch16/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\CodeBreaker.Blazor\CodeBreaker.Blazor.csproj" />
     <ProjectReference Include="..\Codebreaker.BotQ\Codebreaker.BotQ.csproj" />
     <ProjectReference Include="..\CodeBreaker.Bot\CodeBreaker.Bot.csproj" />
     <ProjectReference Include="..\Codebreaker.GameAPIs\Codebreaker.GameAPIs.csproj" />
