--- a/ch16/Codebreaker.Live/Codebreaker.Live.csproj
+++ b/ch16/Codebreaker.Live/Codebreaker.Live.csproj
@@ -22,8 +22,8 @@
     <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.1" />
     <PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.1" />
     <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.1" />
-    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.27" />
-    <PackageReference Include="Grpc.AspNetCore" Version="2.62.0" />
+    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.63.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.5" />
     <PackageReference Include="Microsoft.Azure.SignalR" Version="1.25.2" />
