--- a/ch16/Codebreaker.Ranking/Codebreaker.Ranking.csproj
+++ b/ch16/Codebreaker.Ranking/Codebreaker.Ranking.csproj
@@ -15,8 +15,8 @@
     <PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.1" />
     <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.1" />
     <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.1" />
-    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.27" />
-    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
+    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
+    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.0.0-preview.7.24251.11" />
