--- a/ch16/LiveTestClient/LiveTestClient.csproj
+++ b/ch16/LiveTestClient/LiveTestClient.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.27" />
+    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
